cleanup part 1